# scip-atoms

./: .gitignore  CLAUDE.md  Cargo.toml  INSTALL.md  LICENSE  README.md  RELEASING.md
.github/workflows/: ci.yml  docker-publish.yml  generate-atoms.yml
action/: README.md  action.yml
docker/: Dockerfile  README.md  build.sh  run.sh
docs/: DUPLICATE_SYMBOL_BUG.md  FROM_DEPENDENCY_RESOLUTION.md  HOW_IT_WORKS.md  IMPL_OVERWRITE_BUG_FIX.md  SCIP_SYMBOL_FORMAT_COMPARISON.md  TRAIT_IMPL_SYMBOL_PATTERNS.md  VERIFICATION_ARCHITECTURE.md
src/: constants.rs  error.rs  lib.rs  main.rs  taxonomy.rs  verification.rs  verus_parser.rs
src/commands/: atomize.rs  functions.rs  mod.rs  run.rs  specify.rs  specs_data.rs  stubify.rs  tracked_csv.rs  verify.rs
tests/: duplicate_symbols.rs  function_coverage.rs
