[package]
name = "scip-atoms"
version = "0.1.0"
edition = "2021"
description = "Generate compact function call graph data with line numbers from SCIP indexes"
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/scip-atoms"
keywords = ["scip", "verus-analyzer", "call-graph", "code-analysis", "atoms"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "scip-atoms"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
verus_syn = { version = "0.0.0-2025-11-16-0050", features = ["full", "visit", "parsing"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"

[dev-dependencies]
tempfile = "3.10"
ureq = "2.9"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

