[workspace]

[package]
name = "probe-verus"
version = "1.1.0"
edition = "2021"
description = "Probe Verus projects: generate call graph atoms and analyze verification results"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Beneficial-AI-Foundation/probe-verus"
keywords = ["verus", "verification", "call-graph", "code-analysis", "proof"]
categories = ["development-tools", "command-line-utilities"]

[[bin]]
name = "probe-verus"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
regex = "1.10"
verus_syn = { version = "0.0.0-2025-11-16-0050", features = ["full", "visit", "parsing"] }
proc-macro2 = { version = "1.0", features = ["span-locations"] }
quote = "1.0"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.4"
rust-lapper = "1.1"
thiserror = "1.0"
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
ureq = "2.9"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true

